; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_sbgdec.c_parse_optarg.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_sbgdec.c_parse_optarg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbg_parser = type { i32 }
%struct.sbg_string = type { i32 }

@.str = private unnamed_addr constant [33 x i8] c"option '%c' requires an argument\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sbg_parser*, i8, %struct.sbg_string*)* @parse_optarg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_optarg(%struct.sbg_parser* %0, i8 signext %1, %struct.sbg_string* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sbg_parser*, align 8
  %6 = alloca i8, align 1
  %7 = alloca %struct.sbg_string*, align 8
  store %struct.sbg_parser* %0, %struct.sbg_parser** %5, align 8
  store i8 %1, i8* %6, align 1
  store %struct.sbg_string* %2, %struct.sbg_string** %7, align 8
  %8 = load %struct.sbg_parser*, %struct.sbg_parser** %5, align 8
  %9 = load %struct.sbg_string*, %struct.sbg_string** %7, align 8
  %10 = call i32 @lex_wsword(%struct.sbg_parser* %8, %struct.sbg_string* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %19, label %12

12:                                               ; preds = %3
  %13 = load %struct.sbg_parser*, %struct.sbg_parser** %5, align 8
  %14 = getelementptr inbounds %struct.sbg_parser, %struct.sbg_parser* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i8, i8* %6, align 1
  %17 = call i32 @snprintf(i32 %15, i32 4, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i8 signext %16)
  %18 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %18, i32* %4, align 4
  br label %20

19:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %20

20:                                               ; preds = %19, %12
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @lex_wsword(%struct.sbg_parser*, %struct.sbg_string*) #1

declare dso_local i32 @snprintf(i32, i32, i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
